// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdvancedFilter > should render Advance filter 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
}

.c0 >h3 {
  font-family: Open Sans;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.5rem;
}

.c0 button svg {
  fill: !important;
}

.c7 {
  width: 100%;
}

.c7 button {
  width: 50%;
  padding-right: 0;
}

.c4 {
  padding: 0.5rem 1rem;
}

.c4 .cds--list-box__field {
  border-bottom: 1px solid;
}

.c4 .cds--list-box__menu-item--active .cds--list-box__menu-item__option {
  color: #222;
}

.c1 {
  height: calc(100vh - 9.9rem);
  padding-bottom: 2rem;
}

.c5 {
  padding: 0.5rem 1rem;
}

.c5 .group-input {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  padding: 0;
}

.c5 .cds--label {
  margin-bottom: 0.5rem;
}

.c2 {
  padding: 0.5rem 1rem;
}

.c2 .cds--list-box__field--wrapper {
  border-bottom: 1px solid var(--cds-border-strong);
}

.c2 .cds--list-box--expanded.cds--list-box--lg .cds--list-box__menu {
  max-block-size: 20rem;
}

.c2 .cds--list-box__menu-item--active .cds--list-box__menu-item__option {
  color: #222;
}

.c2 .cds--checkbox-label-text {
  font-size: 0.75rem;
}

.c3 {
  padding: 0.5rem 1rem;
}

.c6 {
  margin: 0.5rem 0;
}

.c6 .cds--checkbox-label-text {
  font-size: 0.75rem;
}

@media (min-width: 769px) {
  .c0 {
    min-width: 20rem;
  }
}

@media (max-width: 768px) {
  .c7 {
    position: fixed;
    bottom: 0;
    left: 0;
  }
}

@media (max-width: 768px) {
  .c1 {
    max-height: calc(100vh - 13rem);
  }
}

<span
    class="cds--popover"
  >
    <span
      class="cds--popover-content filter-popover-content"
    >
      <div
        class="c0"
      >
        <h3>
          Filter by
        </h3>
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom-right cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-:r0:"
              class="cds--btn--icon-only cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost"
              data-testid="filter-close"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="18"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-:r0:"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
      <form
        aria-label="filter-form"
        class="cds--form"
      >
        <div
          class="scrollbar-container c1 ps"
        >
          <div
            class="flex! flex-col! gap-3!"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class=""
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="open"
            >
              <h3
                class="flex!"
                data-orientation="vertical"
                data-slot="accordion-header"
                data-state="open"
              >
                <button
                  aria-controls="radix-:r3:"
                  aria-expanded="true"
                  class="flex! w-full! items-center! justify-between! gap-3! border-0! bg-transparent! outline-none! px-3.5! py-3! text-foreground! data-[state=open]:pb-3! data-[state=open]:pt-3! font-normal! not-italic! text-[16px]! leading-[24px]! tracking-[0%]!"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="open"
                  id="radix-:r2:"
                  type="button"
                >
                  <span
                    class="whitespace-nowrap!"
                  >
                    School  (10)
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="transform: rotate(180deg); transition: transform 0.2s ease;"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r2:"
                class=""
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="open"
                id="radix-:r3:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
              >
                <div
                  class="cds--multi-select__wrapper cds--list-box__wrapper c2"
                >
                  <label
                    class="cds--label"
                    for="downshift-:r4:-toggle-button"
                    id="downshift-:r4:-label"
                  >
                    Building-id
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--multi-select cds--list-box cds--list-box--lg"
                    id="mutli-select-dropdown-building_id_govt"
                  >
                    <div
                      class="cds--list-box__field--wrapper"
                    >
                      <button
                        aria-activedescendant=""
                        aria-controls="downshift-:r4:-menu"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-:r4:-label"
                        class="cds--list-box__field"
                        id="downshift-:r4:-toggle-button"
                        role="combobox"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="cds--list-box__label"
                          id="multiselect-field-label-1"
                        >
                          Select Building-id
                        </span>
                        <div
                          class="cds--list-box__menu-icon"
                        >
                          <svg
                            aria-label="Open menu"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            name="chevron--down"
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                            <title>
                              Open menu
                            </title>
                          </svg>
                        </div>
                      </button>
                    </div>
                    <ul
                      aria-labelledby="downshift-:r4:-label"
                      class="cds--list-box__menu"
                      id="downshift-:r4:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="c3"
                >
                  <div
                    class="cds--form-item cds--text-input-wrapper"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        for="text-input-1"
                      >
                        Building Id
                        <button
                          class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                          data-state="closed"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fill-current!"
                            fill="currentColor"
                            focusable="false"
                            height="12"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 32 32"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                            />
                            <path
                              d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                            />
                          </svg>
                        </button>
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                          id="text-input-1"
                          placeholder="Enter building id"
                          title="Enter building id"
                          type="text"
                          value=""
                        />
                        <span
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper c4"
                >
                  <label
                    class="cds--label"
                    for="downshift-:r7:-toggle-button"
                    id="downshift-:r7:-label"
                  >
                    Computer availability
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--md cds--list-box cds--list-box--md"
                    id="dropdown-computer_availability"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-:r7:-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-:r7:-label"
                      class="cds--list-box__field"
                      id="downshift-:r7:-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="All"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        All
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-:r7:-label"
                      class="cds--list-box__menu"
                      id="downshift-:r7:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="cds--multi-select__wrapper cds--list-box__wrapper c2"
                >
                  <label
                    class="cds--label"
                    for="downshift-:r9:-toggle-button"
                    id="downshift-:r9:-label"
                  >
                    Coverage Type
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--multi-select cds--list-box cds--list-box--lg"
                    id="mutli-select-dropdown-coverage_type"
                  >
                    <div
                      class="cds--list-box__field--wrapper"
                    >
                      <button
                        aria-activedescendant=""
                        aria-controls="downshift-:r9:-menu"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-:r9:-label"
                        class="cds--list-box__field"
                        id="downshift-:r9:-toggle-button"
                        role="combobox"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="cds--list-box__label"
                          id="multiselect-field-label-2"
                        >
                          Select Coverage Type
                        </span>
                        <div
                          class="cds--list-box__menu-icon"
                        >
                          <svg
                            aria-label="Open menu"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            name="chevron--down"
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                            <title>
                              Open menu
                            </title>
                          </svg>
                        </div>
                      </button>
                    </div>
                    <ul
                      aria-labelledby="downshift-:r9:-label"
                      class="cds--list-box__menu"
                      id="downshift-:r9:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="c5"
                >
                  <label
                    class="cds--label cds--label--no-margin"
                  >
                    Equipment's count
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="c3 group-input"
                  >
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="num_robotic_equipment-min-input"
                            placeholder="min(30)"
                            title="min(30)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="num_robotic_equipment-max-input"
                            placeholder="max(100)"
                            title="max(100)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cds--form-item cds--checkbox-wrapper c6"
                  >
                    <input
                      class="cds--checkbox"
                      id="checkbox-school__num_robotic_equipment__range"
                      style="padding: 0rem 1rem;"
                      type="checkbox"
                    />
                    <label
                      class="cds--checkbox-label"
                      for="checkbox-school__num_robotic_equipment__range"
                      title=""
                    >
                      <span
                        class="cds--checkbox-label-text"
                      >
                        Show null values
                      </span>
                    </label>
                    <div
                      class="cds--checkbox__validation-msg"
                    />
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper c4"
                >
                  <label
                    class="cds--label"
                    for="downshift-:rc:-toggle-button"
                    id="downshift-:rc:-label"
                  >
                    Maps views - Grouped
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--md cds--list-box cds--list-box--md"
                    id="dropdown-coverage_type"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-:rc:-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-:rc:-label"
                      class="cds--list-box__field"
                      id="downshift-:rc:-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="All"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        All
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-:rc:-label"
                      class="cds--list-box__menu"
                      id="downshift-:rc:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="c5"
                >
                  <label
                    class="cds--label cds--label--no-margin"
                  >
                    No of Computer
                  </label>
                  <div
                    class="c3 group-input"
                  >
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="num_computers-min-input"
                            placeholder="Min (0)"
                            title="Min (0)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="num_computers-max-input"
                            placeholder="Max (1450)"
                            title="Max (1450)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cds--form-item cds--checkbox-wrapper c6"
                  >
                    <input
                      class="cds--checkbox"
                      id="checkbox-school__num_computers__range"
                      style="padding: 0rem 1rem;"
                      type="checkbox"
                    />
                    <label
                      class="cds--checkbox-label"
                      for="checkbox-school__num_computers__range"
                      title=""
                    >
                      <span
                        class="cds--checkbox-label-text"
                      >
                        Show null values
                      </span>
                    </label>
                    <div
                      class="cds--checkbox__validation-msg"
                    />
                  </div>
                </div>
                <div
                  class="c3"
                >
                  <div
                    class="cds--form-item cds--text-input-wrapper"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        for="text-input-1"
                      >
                        Region
                        <button
                          class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                          data-state="closed"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fill-current!"
                            fill="currentColor"
                            focusable="false"
                            height="12"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 32 32"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                            />
                            <path
                              d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                            />
                          </svg>
                        </button>
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                          id="text-input-1"
                          placeholder="Enter region"
                          title="Enter region"
                          type="text"
                          value=""
                        />
                        <span
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper c4"
                >
                  <label
                    class="cds--label"
                    for="downshift-:rf:-toggle-button"
                    id="downshift-:rf:-label"
                  >
                    School area type - Org
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--md cds--list-box cds--list-box--md"
                    id="dropdown-environment"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-:rf:-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-:rf:-label"
                      class="cds--list-box__field"
                      id="downshift-:rf:-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="All"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        All
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-:rf:-label"
                      class="cds--list-box__menu"
                      id="downshift-:rf:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="c5"
                >
                  <label
                    class="cds--label cds--label--no-margin"
                  >
                    Test Filter NG-001
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="c3 group-input"
                  >
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="connectivity_speed-min-input"
                            placeholder="Min (35)"
                            title="Min (35)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="connectivity_speed-max-input"
                            placeholder="Max (36)"
                            title="Max (36)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cds--form-item cds--checkbox-wrapper c6"
                  >
                    <input
                      class="cds--checkbox"
                      id="checkbox-school__connectivity_speed__range"
                      style="padding: 0rem 1rem;"
                      type="checkbox"
                    />
                    <label
                      class="cds--checkbox-label"
                      for="checkbox-school__connectivity_speed__range"
                      title=""
                    >
                      <span
                        class="cds--checkbox-label-text"
                      >
                        Show null values
                      </span>
                    </label>
                    <div
                      class="cds--checkbox__validation-msg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
        <div
          class="c7"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="reset"
          >
            Reset
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="submit"
          >
            Apply
          </button>
        </div>
      </form>
    </span>
    <span
      class="cds--popover-caret"
    />
  </span>
</DocumentFragment>
`;

exports[`AdvancedFilter > should render Advance filter 2`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
}

.c0 >h3 {
  font-family: Open Sans;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.5rem;
}

.c0 button svg {
  fill: !important;
}

.c7 {
  width: 100%;
}

.c7 button {
  width: 50%;
  padding-right: 0;
}

.c4 {
  padding: 0.5rem 1rem;
}

.c4 .cds--list-box__field {
  border-bottom: 1px solid;
}

.c4 .cds--list-box__menu-item--active .cds--list-box__menu-item__option {
  color: #222;
}

.c1 {
  height: calc(100vh - 9.9rem);
  padding-bottom: 2rem;
}

.c5 {
  padding: 0.5rem 1rem;
}

.c5 .group-input {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  padding: 0;
}

.c5 .cds--label {
  margin-bottom: 0.5rem;
}

.c2 {
  padding: 0.5rem 1rem;
}

.c2 .cds--list-box__field--wrapper {
  border-bottom: 1px solid var(--cds-border-strong);
}

.c2 .cds--list-box--expanded.cds--list-box--lg .cds--list-box__menu {
  max-block-size: 20rem;
}

.c2 .cds--list-box__menu-item--active .cds--list-box__menu-item__option {
  color: #222;
}

.c2 .cds--checkbox-label-text {
  font-size: 0.75rem;
}

.c3 {
  padding: 0.5rem 1rem;
}

.c6 {
  margin: 0.5rem 0;
}

.c6 .cds--checkbox-label-text {
  font-size: 0.75rem;
}

@media (min-width: 769px) {
  .c0 {
    min-width: 20rem;
  }
}

@media (max-width: 768px) {
  .c7 {
    position: fixed;
    bottom: 0;
    left: 0;
  }
}

@media (max-width: 768px) {
  .c1 {
    max-height: calc(100vh - 13rem);
  }
}

<span
    class="cds--popover"
  >
    <span
      class="cds--popover-content filter-popover-content"
    >
      <div
        class="c0"
      >
        <h3>
          Filter by
        </h3>
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom-right cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-:r1a:"
              class="cds--btn--icon-only cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost"
              data-testid="filter-close"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="18"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-:r1a:"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
      <form
        aria-label="filter-form"
        class="cds--form"
      >
        <div
          class="scrollbar-container c1 ps"
        >
          <div
            class="flex! flex-col! gap-3!"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class=""
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="open"
            >
              <h3
                class="flex!"
                data-orientation="vertical"
                data-slot="accordion-header"
                data-state="open"
              >
                <button
                  aria-controls="radix-:r1d:"
                  aria-expanded="true"
                  class="flex! w-full! items-center! justify-between! gap-3! border-0! bg-transparent! outline-none! px-3.5! py-3! text-foreground! data-[state=open]:pb-3! data-[state=open]:pt-3! font-normal! not-italic! text-[16px]! leading-[24px]! tracking-[0%]!"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="open"
                  id="radix-:r1c:"
                  type="button"
                >
                  <span
                    class="whitespace-nowrap!"
                  >
                    School  (10)
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="transform: rotate(180deg); transition: transform 0.2s ease;"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r1c:"
                class=""
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="open"
                id="radix-:r1d:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
              >
                <div
                  class="cds--multi-select__wrapper cds--list-box__wrapper c2"
                >
                  <label
                    class="cds--label"
                    for="downshift-:r1e:-toggle-button"
                    id="downshift-:r1e:-label"
                  >
                    Building-id
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--multi-select cds--list-box cds--list-box--lg"
                    id="mutli-select-dropdown-building_id_govt"
                  >
                    <div
                      class="cds--list-box__field--wrapper"
                    >
                      <button
                        aria-activedescendant=""
                        aria-controls="downshift-:r1e:-menu"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-:r1e:-label"
                        class="cds--list-box__field"
                        id="downshift-:r1e:-toggle-button"
                        role="combobox"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="cds--list-box__label"
                          id="multiselect-field-label-7"
                        >
                          Select Building-id
                        </span>
                        <div
                          class="cds--list-box__menu-icon"
                        >
                          <svg
                            aria-label="Open menu"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            name="chevron--down"
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                            <title>
                              Open menu
                            </title>
                          </svg>
                        </div>
                      </button>
                    </div>
                    <ul
                      aria-labelledby="downshift-:r1e:-label"
                      class="cds--list-box__menu"
                      id="downshift-:r1e:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="c3"
                >
                  <div
                    class="cds--form-item cds--text-input-wrapper"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        for="text-input-1"
                      >
                        Building Id
                        <button
                          class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                          data-state="closed"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fill-current!"
                            fill="currentColor"
                            focusable="false"
                            height="12"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 32 32"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                            />
                            <path
                              d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                            />
                          </svg>
                        </button>
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                          id="text-input-1"
                          placeholder="Enter building id"
                          title="Enter building id"
                          type="text"
                          value=""
                        />
                        <span
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper c4"
                >
                  <label
                    class="cds--label"
                    for="downshift-:r1h:-toggle-button"
                    id="downshift-:r1h:-label"
                  >
                    Computer availability
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--md cds--list-box cds--list-box--md"
                    id="dropdown-computer_availability"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-:r1h:-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-:r1h:-label"
                      class="cds--list-box__field"
                      id="downshift-:r1h:-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="All"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        All
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-:r1h:-label"
                      class="cds--list-box__menu"
                      id="downshift-:r1h:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="cds--multi-select__wrapper cds--list-box__wrapper c2"
                >
                  <label
                    class="cds--label"
                    for="downshift-:r1j:-toggle-button"
                    id="downshift-:r1j:-label"
                  >
                    Coverage Type
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--multi-select cds--list-box cds--list-box--lg"
                    id="mutli-select-dropdown-coverage_type"
                  >
                    <div
                      class="cds--list-box__field--wrapper"
                    >
                      <button
                        aria-activedescendant=""
                        aria-controls="downshift-:r1j:-menu"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-:r1j:-label"
                        class="cds--list-box__field"
                        id="downshift-:r1j:-toggle-button"
                        role="combobox"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="cds--list-box__label"
                          id="multiselect-field-label-8"
                        >
                          Select Coverage Type
                        </span>
                        <div
                          class="cds--list-box__menu-icon"
                        >
                          <svg
                            aria-label="Open menu"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            name="chevron--down"
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                            <title>
                              Open menu
                            </title>
                          </svg>
                        </div>
                      </button>
                    </div>
                    <ul
                      aria-labelledby="downshift-:r1j:-label"
                      class="cds--list-box__menu"
                      id="downshift-:r1j:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="c5"
                >
                  <label
                    class="cds--label cds--label--no-margin"
                  >
                    Equipment's count
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="c3 group-input"
                  >
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="num_robotic_equipment-min-input"
                            placeholder="min(30)"
                            title="min(30)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="num_robotic_equipment-max-input"
                            placeholder="max(100)"
                            title="max(100)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cds--form-item cds--checkbox-wrapper c6"
                  >
                    <input
                      class="cds--checkbox"
                      id="checkbox-school__num_robotic_equipment__range"
                      style="padding: 0rem 1rem;"
                      type="checkbox"
                    />
                    <label
                      class="cds--checkbox-label"
                      for="checkbox-school__num_robotic_equipment__range"
                      title=""
                    >
                      <span
                        class="cds--checkbox-label-text"
                      >
                        Show null values
                      </span>
                    </label>
                    <div
                      class="cds--checkbox__validation-msg"
                    />
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper c4"
                >
                  <label
                    class="cds--label"
                    for="downshift-:r1m:-toggle-button"
                    id="downshift-:r1m:-label"
                  >
                    Maps views - Grouped
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--md cds--list-box cds--list-box--md"
                    id="dropdown-coverage_type"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-:r1m:-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-:r1m:-label"
                      class="cds--list-box__field"
                      id="downshift-:r1m:-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="All"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        All
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-:r1m:-label"
                      class="cds--list-box__menu"
                      id="downshift-:r1m:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="c5"
                >
                  <label
                    class="cds--label cds--label--no-margin"
                  >
                    No of Computer
                  </label>
                  <div
                    class="c3 group-input"
                  >
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="num_computers-min-input"
                            placeholder="Min (0)"
                            title="Min (0)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="num_computers-max-input"
                            placeholder="Max (1450)"
                            title="Max (1450)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cds--form-item cds--checkbox-wrapper c6"
                  >
                    <input
                      class="cds--checkbox"
                      id="checkbox-school__num_computers__range"
                      style="padding: 0rem 1rem;"
                      type="checkbox"
                    />
                    <label
                      class="cds--checkbox-label"
                      for="checkbox-school__num_computers__range"
                      title=""
                    >
                      <span
                        class="cds--checkbox-label-text"
                      >
                        Show null values
                      </span>
                    </label>
                    <div
                      class="cds--checkbox__validation-msg"
                    />
                  </div>
                </div>
                <div
                  class="c3"
                >
                  <div
                    class="cds--form-item cds--text-input-wrapper"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        for="text-input-1"
                      >
                        Region
                        <button
                          class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                          data-state="closed"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fill-current!"
                            fill="currentColor"
                            focusable="false"
                            height="12"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 32 32"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                            />
                            <path
                              d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                            />
                          </svg>
                        </button>
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                          id="text-input-1"
                          placeholder="Enter region"
                          title="Enter region"
                          type="text"
                          value=""
                        />
                        <span
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper c4"
                >
                  <label
                    class="cds--label"
                    for="downshift-:r1p:-toggle-button"
                    id="downshift-:r1p:-label"
                  >
                    School area type - Org
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--md cds--list-box cds--list-box--md"
                    id="dropdown-environment"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-:r1p:-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-:r1p:-label"
                      class="cds--list-box__field"
                      id="downshift-:r1p:-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="All"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        All
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-:r1p:-label"
                      class="cds--list-box__menu"
                      id="downshift-:r1p:-menu"
                      role="listbox"
                    />
                  </div>
                </div>
                <div
                  class="c5"
                >
                  <label
                    class="cds--label cds--label--no-margin"
                  >
                    Test Filter NG-001
                    <button
                      class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
                      data-state="closed"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fill-current!"
                        fill="currentColor"
                        focusable="false"
                        height="12"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                        />
                        <path
                          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                        />
                      </svg>
                    </button>
                  </label>
                  <div
                    class="c3 group-input"
                  >
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="connectivity_speed-min-input"
                            placeholder="Min (35)"
                            title="Min (35)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cds--form-item cds--text-input-wrapper"
                    >
                      <div
                        class="cds--text-input__label-wrapper"
                      />
                      <div
                        class="cds--text-input__field-outer-wrapper"
                      >
                        <div
                          class="cds--text-input__field-wrapper"
                        >
                          <input
                            class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                            id="connectivity_speed-max-input"
                            placeholder="Max (36)"
                            title="Max (36)"
                            type="number"
                            value=""
                          />
                          <span
                            class="cds--text-input__counter-alert"
                            role="alert"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cds--form-item cds--checkbox-wrapper c6"
                  >
                    <input
                      class="cds--checkbox"
                      id="checkbox-school__connectivity_speed__range"
                      style="padding: 0rem 1rem;"
                      type="checkbox"
                    />
                    <label
                      class="cds--checkbox-label"
                      for="checkbox-school__connectivity_speed__range"
                      title=""
                    >
                      <span
                        class="cds--checkbox-label-text"
                      >
                        Show null values
                      </span>
                    </label>
                    <div
                      class="cds--checkbox__validation-msg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
        <div
          class="c7"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="reset"
          >
            Reset
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="submit"
          >
            Apply
          </button>
        </div>
      </form>
    </span>
    <span
      class="cds--popover-caret"
    />
  </span>
</DocumentFragment>
`;

exports[`AdvancedFilter > should render Advance filter button  1`] = `
<DocumentFragment>
  .c1 .cds--popover>.filter-popover-content {
  background: #181818;
  height: calc(100vh - 2.3rem);
  transform: none;
  top: -1rem;
  position: fixed;
  right: 0;
  width: 20rem;
}

.c1 .cds--popover .cds--popover-caret {
  display: none;
}

.c0 {
  z-index: 0;
  right: .5rem;
  border-radius: 62.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.c2 {
  position: relative;
}

.c2 .cds--btn:not(.cds--btn--disabled) {
  background: #474747;
  border-radius: 0.380rem;
  padding: 0.3rem 0.6rem;
}

.c2 .cds--btn svg {
  transform: rotate(90deg);
  margin-right: 0.325rem;
  margin-top: 0.0625rem;
}

.c2 .cds--btn--primary:focus {
  box-shadow: 0 0 0 1px #181818;
}

.c2 svg {
  fill: #fff;
}

.c2 .cds--popover {
  position: relative;
  z-index: 6001;
  top: -1rem;
}

.c2 .cds--tooltip-content {
  background: #fff!important;
  color: #181818!important;
}

.c2 .cds--popover-caret {
  background: #fff!important;
}

.c2 .cds--btn--primary:focus {
  border-color: #181818;
}

@media (max-width: 768px) {
  .c1 .cds--popover>.filter-popover-content {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    max-inline-size: none;
    height: 100%;
  }
}

<div
    class="c0 filter-wrapper-popup"
  >
    <span
      class="cds--popover-container cds--popover--drop-shadow cds--popover--left c1 filter-popover-link"
    >
      <div
        style="display: flex; flex-direction: row;"
      >
        <div
          class="c2"
        >
          <button
            align="left"
            class="cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
            label="Filter(s)"
            tooltiptext="Filter(s)"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="#fff"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 30v-4.1c2.3-.5 4-2.5 4-4.9 0-2.4-1.7-4.4-4-4.9V2s-2 0-2 0v14.1c-2.3.5-4 2.5-4 4.9 0 2.4 1.7 4.4 4 4.9v4.1s2 0 2 0zm-4-9c0-1.7 1.3-3 3-3s3 1.3 3 3c0 1.7-1.3 3-3 3s-3-1.3-3-3zM8 2v4.1c-2.3.5-4 2.5-4 4.9 0 2.4 1.7 4.4 4 4.9v14.1s2 0 2 0v-14.1c2.3-.5 4-2.5 4-4.9 0-2.4-1.7-4.4-4-4.9V2s-2 0-2 0zm4 9c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3 3 1.3 3 3z"
              />
            </svg>
            <span>
              Filter(s)
            </span>
          </button>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`AdvancedFilter > should render Advance filter button 1`] = `<DocumentFragment />`;

exports[`RangeTextInput Component > RangeTextInput input 1`] = `
.c0 {
  padding: 0.5rem 1rem;
}

.c0 .group-input {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  padding: 0;
}

.c0 .cds--label {
  margin-bottom: 0.5rem;
}

.c1 {
  padding: 0.5rem 1rem;
}

.c2 {
  margin: 0.5rem 0;
}

.c2 .cds--checkbox-label-text {
  font-size: 0.75rem;
}

<div>
  <div
    class="c0"
  >
    <label
      class="cds--label cds--label--no-margin"
    >
      No of Teachers
      <button
        class="inline-flex! items-center! justify-center! border-0! bg-transparent! p-0! ml-1! align-middle! cursor-pointer! text-[#6f6f6f]! hover:text-[#8d8d8d]! transition-colors!"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="fill-current!"
          fill="currentColor"
          focusable="false"
          height="12"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
          />
          <path
            d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
          />
        </svg>
      </button>
    </label>
    <div
      class="c1 group-input"
    >
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        />
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input cds--text-input--sm cds--layout--size-sm"
              id="-min-input"
              placeholder="Min (0)"
              title="Min (0)"
              type="number"
              value="15"
            />
            <span
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        />
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input cds--text-input--sm cds--layout--size-sm"
              id="-max-input"
              placeholder="Max (10K)"
              title="Max (10K)"
              type="number"
              value="20"
            />
            <span
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--form-item cds--checkbox-wrapper c2"
    >
      <input
        checked=""
        class="cds--checkbox"
        id="checkbox-num_computers__range"
        style="padding: 0rem 1rem;"
        type="checkbox"
      />
      <label
        class="cds--checkbox-label"
        for="checkbox-num_computers__range"
        title=""
      >
        <span
          class="cds--checkbox-label-text"
        >
          Show null values
        </span>
      </label>
      <div
        class="cds--checkbox__validation-msg"
      />
    </div>
  </div>
</div>
`;
